apps/base/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName jellyfin-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "100"
            - name: TZ
              value: Europe/London
            - name: UMASK
              value: "007"
          image: linuxserver/jellyfin:latest@sha256:b0b6d034aa52ed6e1a76daaa3d7ed29039d2b802a50fa8ffd1d9fc8d3fd836c7
          imagePullPolicy: IfNotPresent
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
            - containerPort: 8920
              name: https
              protocol: TCP
          resources:
            requests:
              cpu: 100m # 100 millicores, equivalent to 0.25 CPU cores
          volumeMounts:
            - mountPath: /media
              name: media
              subPath: jellyfin/media
            - mountPath: /cache
              name: cache
            - mountPath: /config
              name: config-data
              subPath: jellyfin/config
            - mountPath: /transcode
              name: transcode
      hostname: jellyfin
      volumes:
        - name: config-data
          nfs:
            server: ${NFS_STORAGE_HOST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: cache
          emptyDir: {}
        - name: transcode
          emptyDir: {}
        - name: media
          nfs:
            server: ${NFS_STORAGE_HOST}
            path: /mnt/mopower/swarm-data
