apps/base/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  selector:
    app: jellyfin-deployment
  ports:
  - name: http
    port: 8096
    targetPort: 8096
    protocol: TCP
  - name: https
    port: 8920
    targetPort: 8920
    protocol: TCP
