apps/base/media/jellyfin/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.internal.${SECRET_DOMAIN}`) || Host(`jellyfin.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 8096
  tls:
    certResolver: letsencrypt
